--- a/04-gif-expert-app/src/index.css
+++ b/04-gif-expert-app/src/index.css
@@ -11,3 +11,30 @@ input {
     font-size: 1.2rem;
     width: 100%;
 }
+
+/* GifGrid  ( Container )*/
+.card-grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+
+/* GifGridItem */
+.card {
+    align-content: center;
+    border: 1px solid gray;
+    border-radius: 6px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    overflow: hidden; /* Para que los bordes de las img no se salgan del contenedor. */
+}
+
+.card p {
+    padding: 5px;
+    text-align: center;
+}
+
+.card img {
+    max-height: 220px;
+}
